added string and dimens files and refactored the code